# flake8-printf-formatting

./: .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  README.md  flake8_printf_formatting.py  setup.cfg  tox.ini
.github/workflows/: deploy.yml  python-tests.yml
tests/: test_plugin.py
