[metadata]
name = flake8-printf-formatting
version = 1.0.0
description = flake8 plugin which forbids printf-style string formatting
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/atugushev/flake8-printf-formatting
author = Albert Tugushev
author_email = albert@tugushev.ru
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
py_modules = flake8_printf_formatting
install_requires =
    flake8>=3.7
    importlib-metadata>=0.9
python_requires = >=3.6

[options.entry_points]
flake8.extension =
    MOD=flake8_printf_formatting:Plugin

[bdist_wheel]
universal = True

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false

[flake8]
max-line-length = 88
exclude =
    .tox
    .venv

[isort]
combine_as_imports = True
include_trailing_comma = True
line_length = 88
multi_line_output = 3
default_section=THIRDPARTY
known_first_party = flake8_printf_formatting, tests

[coverage:run]
branch = True
source = .
omit =
    .tox/*
    .venv/*
    venv/*
    setup.py

[coverage:report]
show_missing = True
skip_covered = True
